--- a/src/components/VirtualTable/index.css
+++ b/src/components/VirtualTable/index.css
@@ -5,11 +5,13 @@
 
 .virtual-table-container {
   overflow: auto;
-   height: 100%;
+  width: 100%;
 }
 
 .virtual-table-min-width {
-  display: grid;
+  display: block;
+  min-width: 100%;
+  width: fit-content;
 }
 
 /* Table Header Styles */
@@ -49,15 +51,18 @@
 
 .virtual-table-header-content {
   position: relative;
-  min-width: max-content;
+  min-width: 100%;
+  width: fit-content;
 }
 
-/* 删除了.virtual-table-header-content.sticky的冗余样式，因为它与非sticky状态样式重复 */
+/* Delete了.virtual-table-header-content.sticky的冗余样式，因为它与非sticky状态样式重复 */
 
 /* Table List Styles */
 .agglo-tree-table-row {
   transition: background-color 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
   display: flex;
+  min-width: 100%;
+  width: fit-content;
 }
 
 .agglo-tree-table-row:hover {
